crates/tuna/tests/parser/fail/super-class-field.som
"test:
fail-message:
  - contains: define
  - contains: super
"

SuperClassField = (
  ----

  |a b c super d e f|

  run = (42)
)
